Project

General

Profile

Actions

Bug #46533

closed

mds: null pointer dereference in MDCache::finish_rollback

Added by Zheng Yan almost 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description


Related issues 3 (0 open3 closed)

Related to CephFS - Bug #45024: mds: wrong link count under certain circumstanceResolvedXinying Song

Actions
Copied to CephFS - Backport #46635: nautilus: mds: null pointer dereference in MDCache::finish_rollbackResolvedPatrick DonnellyActions
Copied to CephFS - Backport #46636: octopus: mds: null pointer dereference in MDCache::finish_rollbackResolvedWei-Chung ChengActions
Actions #1

Updated by Zheng Yan almost 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 36097
Actions #2

Updated by Patrick Donnelly almost 4 years ago

  • Related to Bug #45024: mds: wrong link count under certain circumstance added
Actions #3

Updated by Patrick Donnelly almost 4 years ago

  • Assignee set to Zheng Yan
  • Target version set to v16.0.0
  • Source set to Development
  • Component(FS) MDS added
Actions #4

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46635: nautilus: mds: null pointer dereference in MDCache::finish_rollback added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46636: octopus: mds: null pointer dereference in MDCache::finish_rollback added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF