mds: fix nullptr dereference in MDCache::finish_rollback

introduced by commit ebcbe9a7560
"mds: preserve ESlaveUpdate::OP_PREPARE logevent before doing commit"

Fixes: https://tracker.ceph.com/issues/46533
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>